plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.6'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'eventee.server'
version = '0.0.1-SNAPSHOT'
description = 'eventee project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()

	maven {
		name = 'GitHubPackages'
		url = uri("https://maven.pkg.github.com/KTEventee/eventee-common")
		credentials {
			username = project.findProperty("gpr.user") ?: System.getenv("COMMON_USERNAME_GITHUB")
			password = project.findProperty("gpr.token") ?: System.getenv("COMMON_TOKEN_GITHUB")
		}
	}

}

dependencies {
	// 공통 모듈
	implementation "eventee.server:common:v0.6.3"

	// 스프링 스타터
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'io.micrometer:micrometer-registry-prometheus'

	// 롬복
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

//	//jwt
//	implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
//	implementation 'io.jsonwebtoken:jjwt-impl:0.12.5'
//	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.5'
//
//	//oauth
//	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	//swagger
	implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0"

	//postgres
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.postgresql:postgresql:42.7.3'
	runtimeOnly 'org.postgresql:postgresql'

	// Redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
	annotationProcessor 'jakarta.annotation:jakarta.annotation-api'

	// S3
	implementation 'software.amazon.awssdk:sts'          // IAM 역할 기반 인증
	implementation platform("software.amazon.awssdk:bom:2.25.61")
	implementation "software.amazon.awssdk:s3"

	implementation 'org.springframework.boot:spring-boot-starter-security'

}

tasks.named('test') {
	useJUnitPlatform()
}
